Added CI/CD workflow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,19 @@ readme = "README.md"
 requires-python = ">=3.12"
 license-files = { paths = ["LICENSE"] }
 authors = [
-    { name = "Mitja M. Zdouc", email = "mmzdouc@gmail.com" }
+    { name = "Mitja M. Zdouc", email = "zdoucmm@gmail.com" }
+]
+keywords = [
+    "cheminformatics",
+    "genomics"
+]
+classifiers = [
+    "Programming Language :: Python :: 3.12",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: POSIX :: Linux",
+    "Development Status :: 4 - Beta",
+    "Topic :: Scientific/Engineering :: Bio-Informatics",
+    "Topic :: Scientific/Engineering :: Chemistry"
 ]
 
 dependencies = [
@@ -35,6 +47,24 @@ dev = [
 features = [
     "dev"
 ]
+
+[tool.hatch.build.targets.sdist]
+exclude = [
+  "/.idea/",
+  "/.github/",
+  "/.git/",
+  "/.pytest_cache/",
+  "/.ruff_cache/",
+  "/.venv",
+  "/tests/",
+  "/.gitignore",
+  "/.pre-commit-config.yaml",
+  "/CODE_OF_CONDUCT.md",
+  "/CONTRIBUTING.md"
+]
+
+[tool.hatch.build.targets.wheel]
+packages = ["mite_schema"]
 
 [tool.pytest.ini_options]
 minversion = "6.0"
