--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,10 @@ build-backend = "hatchling.build"
 
 [project]
 name = "mite_schema"
-version = "1.1"
+version = "1.2"
 description = "Containing the Minimum Information about a Tailoring Enzymes schema and auxiliary methods"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.11"
 license-files = { paths = ["LICENSE"] }
 authors = [
     { name = "Mitja M. Zdouc", email = "zdoucmm@gmail.com" }
@@ -17,6 +17,7 @@ keywords = [
     "genomics"
 ]
 classifiers = [
+    "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "License :: OSI Approved :: MIT License",
     "Operating System :: POSIX :: Linux",
